--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,13 @@
 <p>This is the partial for view 1.</p>
+<h1>some text</h1>
+<h1>some text</h1>
+<h1>some text</h1>
+
+<button onclick="myFunction()">make all headers red</button>
+<script>
+
+    
+</script>
+
+
+
