--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,4 +1,8 @@
 <p>This is the partial for view 2.</p>
+
+<h1>some text 2</h1>
+<h1>some text 2</h1>
+<h1>some text 2</h1>
 <p>
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
